@@ -1,8 +1,6 @@
 ## 0.3
 
-  - BUG: HEAD request on invalid entry caches zero-length response
   - BUG: meta store hits but entity misses
-  - Are we doing HEAD properly?
   - liberal, conservative, sane caching configs
   - Sample app
   - busters.rb doc and tests
